# CodeSamples

./: .gitignore  README.md
bash/: README.md
bash/snippets/: README.md  snippets.txt
c/: README.md  matrix.h
c/data-structures/: README.md
c/data-structures/doubly-linked-list/: README.md
c/ising/: ising3D.c
c/misc/: matrix.h
c/misc/dollarCostAverage/: principal  principal.c
c/parallel/src/: CMakeLists.txt
c/parallel/src/factorial/: mpi_factorial.c  ser_factorial.c  ser_factorial_recursive.c
cpp/: README.md  matrix.hpp
cpp/checkIfEveryRowAndCol/: solution.cpp
cpp/findTheIndexOfFirstOcc/: solution.cpp
cpp/isograms/: README.md  errorLog.txt  test  test.cpp  testInput.txt
cpp/kthGrammar/: solution.cpp
cpp/maximumFrequencyStack/: solution.cpp
cpp/mergeStringsAlt/: solution.cpp
lua/: README.md
python/: README.md
python/PerfScripts/: README.md
python/VTK/misc/: cone.py
python/basketball/: change_parentheses_to_brackets.py  march_madness_sim.py  mm_win_prob.py  mm_win_prob_fixed.py  projectilemotion_bsp.py
python/githubPagesMacroTranslation/: main.py
python/githubpages-macrotranslation/: README.txt  input.txt  newmacros.txt
python/githubpages-macrotranslation/deprecated/: main.py  newmacros.txt
python/kaggle/learn-itml/: README.md
python/kthGrammar/: numBytes.py
python/leetcode/: README.md
python/misc/: README.md
python/sympy/: diff.py  diff_ln.py
python/tonnage/: README.md
python/weightlifting/: README.md  createTonnage.py  tonnage.py
rust/: README.md
rust/largestLocalValuesInMatrix/: solution.rs
(+223 files in other folders)
